--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,8 @@
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/roboto/roboto-v20-latin_cyrillic-regular.eot");
-  src: local("Roboto"), local("Roboto-Regular"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-regular.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-regular.woff2") format("woff2"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-regular.woff") format("woff"),
+  src: local("Roboto"), local("Roboto-Regular"), url("../fonts/roboto/roboto-v20-latin_cyrillic-regular.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/roboto/roboto-v20-latin_cyrillic-regular.woff2") format("woff2"), url("../fonts/roboto/roboto-v20-latin_cyrillic-regular.woff") format("woff"),
     url("../fonts/roboto/roboto-v20-latin_cyrillic-regular.ttf") format("truetype"),
     url("../fonts/roboto/roboto-v20-latin_cyrillic-regular.svg#Roboto") format("svg");
 }
@@ -16,12 +14,9 @@
   font-style: normal;
   font-weight: 500;
   src: url("../fonts/roboto/roboto-v20-latin_cyrillic-500.eot");
-  src: local("Roboto Medium"), local("Roboto-Medium"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-500.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-500.woff2") format("woff2"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-500.woff") format("woff"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-500.ttf") format("truetype"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-500.svg#Roboto") format("svg");
+  src: local("Roboto Medium"), local("Roboto-Medium"), url("../fonts/roboto/roboto-v20-latin_cyrillic-500.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/roboto/roboto-v20-latin_cyrillic-500.woff2") format("woff2"), url("../fonts/roboto/roboto-v20-latin_cyrillic-500.woff") format("woff"),
+    url("../fonts/roboto/roboto-v20-latin_cyrillic-500.ttf") format("truetype"), url("../fonts/roboto/roboto-v20-latin_cyrillic-500.svg#Roboto") format("svg");
 }
 
 @font-face {
@@ -29,12 +24,9 @@
   font-style: normal;
   font-weight: 700;
   src: url("../fonts/roboto/roboto-v20-latin_cyrillic-700.eot");
-  src: local("Roboto Bold"), local("Roboto-Bold"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-700.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-700.woff2") format("woff2"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-700.woff") format("woff"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-700.ttf") format("truetype"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-700.svg#Roboto") format("svg");
+  src: local("Roboto Bold"), local("Roboto-Bold"), url("../fonts/roboto/roboto-v20-latin_cyrillic-700.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/roboto/roboto-v20-latin_cyrillic-700.woff2") format("woff2"), url("../fonts/roboto/roboto-v20-latin_cyrillic-700.woff") format("woff"),
+    url("../fonts/roboto/roboto-v20-latin_cyrillic-700.ttf") format("truetype"), url("../fonts/roboto/roboto-v20-latin_cyrillic-700.svg#Roboto") format("svg");
 }
 
 @font-face {
@@ -42,12 +34,9 @@
   font-style: normal;
   font-weight: 900;
   src: url("../fonts/roboto/roboto-v20-latin_cyrillic-900.eot");
-  src: local("Roboto Black"), local("Roboto-Black"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-900.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-900.woff2") format("woff2"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-900.woff") format("woff"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-900.ttf") format("truetype"),
-    url("../fonts/roboto/roboto-v20-latin_cyrillic-900.svg#Roboto") format("svg");
+  src: local("Roboto Black"), local("Roboto-Black"), url("../fonts/roboto/roboto-v20-latin_cyrillic-900.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/roboto/roboto-v20-latin_cyrillic-900.woff2") format("woff2"), url("../fonts/roboto/roboto-v20-latin_cyrillic-900.woff") format("woff"),
+    url("../fonts/roboto/roboto-v20-latin_cyrillic-900.ttf") format("truetype"), url("../fonts/roboto/roboto-v20-latin_cyrillic-900.svg#Roboto") format("svg");
 }
 
 @font-face {
@@ -71,6 +60,7 @@
   --team-bg-cl: #f5f4fa;
   --footer-bg-cl: #2f303a;
   --footer-contacts: rgba(255, 255, 255, 0.6);
+  --socialnetworks-icon: #afb1b8;
 }
 
 html {
@@ -124,6 +114,7 @@ body {
 .site-nav {
   display: flex;
   margin-left: 93px;
+  margin-right: auto;
 }
 
 .list .item-header:not(:last-child) {
@@ -134,34 +125,23 @@ body {
   margin-bottom: 32px;
 }
 
-.mail-top::before {
-  display: inline-block;
-  content: "";
+.mail-svg {
   height: 12px;
   width: 16px;
-
-  background-position: center;
-  background-size: auto;
-  background-repeat: no-repeat;
-}
-.mail-top::before {
-  background-image: url(../images/envelope.svg);
 }
 
-.contacts-top::before {
-  display: inline-block;
-  content: "";
+.contacts-svg {
   height: 16px;
   width: 10px;
-
-  background-position: center;
-  background-size: auto;
-  background-repeat: no-repeat;
 }
 
-.contacts-top::before {
-  background-image: url(../images/phone.svg);
+.header-mail:hover .mail-svg,
+.header-mail:focus .mail-svg,
+.header-cont:hover .contacts-svg,
+.header-cont:focus .contacts-svg {
+  fill: var(--acent-cl);
 }
+
 .container-contacts {
   display: flex;
   margin-left: auto;
@@ -299,7 +279,19 @@ address {
   padding-top: 200px;
   padding-bottom: 210px;
   text-align: center;
+}
+.hero {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--footer-bg-cl);
+  background-image: url(../images/hero\ title.jpg);
+  background-color: rgba(47, 48, 58, 0.4);
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .title-hero {
@@ -352,34 +344,20 @@ address {
   width: 270px;
 }
 
-.act-text {
-  margin: 0px;
-}
-
-.item-activity::before {
-  display: block;
-  content: "";
+.activity-svg {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 
   height: 120px;
-  background-size: auto;
-  background-repeat: no-repeat;
-  background-position: center;
+  width: 270px;
+  margin-bottom: 30px;
+
   background-color: #f5f4fa;
 }
-.icon-satellite::before {
-  background-image: url(../images/satellite.svg);
-}
 
-.icon-clock::before {
-  background-image: url(../images/clock.svg);
-}
-
-.icon-computer::before {
-  background-image: url(../images/computer.svg);
-}
-
-.icon-astronaut::before {
-  background-image: url(../images/astronaut.svg);
+.act-text {
+  margin: 0px;
 }
 
 /*чем мы занимаемся*/
@@ -457,61 +435,36 @@ address {
 
 .socialnetworks {
   display: flex;
-  height: 44px;
-  /*margin-right: auto;
-  margin-left: auto;*/
-  justify-content: center;
+  padding-right: 32px;
+  padding-left: 32px;
   margin-bottom: 30px;
-  padding: 0px 32px;
-
-  outline: 1px solid tomato;
 }
 
-.instagram {
-  display: block;
-  content: "";
-  height: 44px;
-  width: 44px;
-  background-size: auto;
-  background-position: center;
-  background-repeat: no-repeat;
+.socialnetworks-links:not(:last-child) {
   margin-right: 10px;
-  background-image: url(../images/instagram\ 2.svg);
 }
-.twitter {
-  display: block;
-  content: "";
-  height: 44px;
+.socialnetworks-links {
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   width: 44px;
-  background-size: auto;
-  background-position: center;
-  background-repeat: no-repeat;
-  margin-right: 10px;
-  background-image: url(../images/twitter\ 1.svg);
+  height: 44px;
+  background-color: var(--white);
+  border-radius: 50%;
 }
 
-.facebook {
-  display: block;
-  content: "";
-  height: 44px;
-  width: 44px;
-  background-size: auto;
-  background-position: center;
-  background-repeat: no-repeat;
-  margin-right: 10px;
-  background-image: url(../images/facebook\ 1.svg);
+.socialnetworks-links:hover .socialnetworks-icon,
+.socialnetworks-links:focus .socialnetworks-icon {
+  fill: var(--acent-cl);
 }
 
-.linkedin {
-  display: block;
-  content: "";
-  height: 44px;
-  width: 44px;
-  background-size: auto;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url(../images/linkedin\ 1.svg);
+.socialnetworks-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--socialnetworks-icon);
 }
+
 /*Постоянные Клиенты*/
 
 .title-client {
@@ -538,41 +491,38 @@ address {
   padding-bottom: 94px;
 }
 
-.client {
-  display: block;
+.client-color {
+  fill: var(--socialnetworks-icon);
+}
+
+.client-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   content: "";
   width: 170px;
   height: 90px;
+
   margin-right: 30px;
 
   background-size: auto;
   background-repeat: no-repeat;
   background-position: center;
   background-color: #f5f4fa;
-
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
 }
 
-.logo1 {
-  background-image: url(../images/logo1.svg);
+.client-links:hover {
+  border-color: var(--acent-cl);
 }
-.logo2 {
-  background-image: url(../images/logo2.svg);
+
+.client-links:hover .client-color,
+.client-links:focus .client-color {
+  fill: var(--acent-cl);
 }
-.logo3 {
-  background-image: url(../images/logo3.svg);
-}
-.logo4 {
-  background-image: url(../images/logo4.svg);
-}
-.logo5 {
-  background-image: url(../images/logo5.svg);
-}
-.logo6 {
-  background-image: url(../images/logo6.svg);
-}
+
 .client:last-child {
   margin-right: 0px;
 }
@@ -657,7 +607,25 @@ address {
 /* Футрер*/
 
 .footer-bg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: var(--footer-bg-cl);
+}
+
+
+.socialnetworcs-title  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  size: 10px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white);
 }
 
 .footer-contacts {
@@ -668,9 +636,14 @@ address {
   color: var(--white);
 }
 
+
+
 .logo-box {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+.footer-flex {
+  display: flex;
 }
 
 .footer-target {
@@ -692,3 +665,65 @@ address {
   margin-bottom: 0px;
   color: rgba(255, 255, 255, 0.6);
 }
+
+.socialnetworcs-footer {
+  display: flex;
+  flex-wrap: wrap;
+  
+ 
+  margin: 0px;
+  padding: 0px;
+  width: 206px;
+  height: 80px;
+  outline: 1px solid tomato;
+}
+
+.socialnetworks-links-footer {
+  display:inline-flex;
+ 
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+
+.socialnetworks-icon-footer {
+  display: flex;
+  width: 20px;
+  height: 20px;
+  fill: var(--white);
+}
+.socialnetworks-links-footer:not(:last-child) {
+  margin-right: 10px;
+}
+.socialnetworks-links-footer:hover .socialnetworks-icon-footer,
+.socialnetworks-links-footer:focus .socialnetworks-icon-footer {
+  fill: var(--acent-cl);
+}
+
+.socialnetworcs-title  {
+  margin: 0px;
+  padding: 0px;
+  margin-bottom: 20px;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white);
+}
+
+
+
+/*display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: var(--white);
+  border: 50%;
+  
+  ..//<h2 class="socialnetworcs-title">Присоединяйтесь</h2>//..
