--- a/css/styles.css
+++ b/css/styles.css
@@ -566,6 +566,10 @@ address {
   flex-wrap: wrap;
 }
 
+.portfolio-cards:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-cards {
   width: 370px;
   display: inline-block;
@@ -613,8 +617,7 @@ address {
   background-color: var(--footer-bg-cl);
 }
 
-
-.socialnetworcs-title  {
+.socialnetworcs-title {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -635,8 +638,6 @@ address {
   letter-spacing: 0.03em;
   color: var(--white);
 }
-
-
 
 .logo-box {
   padding-top: 60px;
@@ -669,18 +670,17 @@ address {
 .socialnetworcs-footer {
   display: flex;
   flex-wrap: wrap;
-  
- 
+
   margin: 0px;
   padding: 0px;
+  margin-left: 70px;
   width: 206px;
   height: 80px;
-  outline: 1px solid tomato;
 }
 
 .socialnetworks-links-footer {
-  display:inline-flex;
- 
+  display: inline-flex;
+
   justify-content: center;
   align-items: center;
   width: 44px;
@@ -703,7 +703,7 @@ address {
   fill: var(--acent-cl);
 }
 
-.socialnetworcs-title  {
+.socialnetworcs-title {
   margin: 0px;
   padding: 0px;
   margin-bottom: 20px;
@@ -714,16 +714,3 @@ address {
   text-transform: uppercase;
   color: var(--white);
 }
-
-
-
-/*display: inline-flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  background-color: var(--white);
-  border: 50%;
-  
-  ..//<h2 class="socialnetworcs-title">Присоединяйтесь</h2>//..
