--- a/css/styles.css
+++ b/css/styles.css
@@ -128,11 +128,13 @@ body {
 .mail-svg {
   height: 12px;
   width: 16px;
+  fill: var(--main-text-cl);
 }
 
 .contacts-svg {
   height: 16px;
   width: 10px;
+  fill: var(--main-text-cl);
 }
 
 .header-mail:hover .mail-svg,
@@ -285,9 +287,10 @@ address {
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-  background-color: var(--footer-bg-cl);
-  background-image: url(../images/hero\ title.jpg);
-  background-color: rgba(47, 48, 58, 0.4);
+
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero\ title.jpg);
+
+  background-color: #c4c4c4;
 
   background-repeat: no-repeat;
   background-position: center;
@@ -454,9 +457,12 @@ address {
   border-radius: 50%;
 }
 
+.socialnetworks-links:hover,
+.socialnetworks-links:focus,
 .socialnetworks-links:hover .socialnetworks-icon,
 .socialnetworks-links:focus .socialnetworks-icon {
-  fill: var(--acent-cl);
+  background-color: var(--acent-cl);
+  fill: var(--white);
 }
 
 .socialnetworks-icon {
@@ -508,7 +514,7 @@ address {
   background-size: auto;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #f5f4fa;
+
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
@@ -698,9 +704,13 @@ address {
 .socialnetworks-links-footer:not(:last-child) {
   margin-right: 10px;
 }
+
+.socialnetworks-links-footer:hover,
+.socialnetworks-links-footer:focus,
 .socialnetworks-links-footer:hover .socialnetworks-icon-footer,
 .socialnetworks-links-footer:focus .socialnetworks-icon-footer {
-  fill: var(--acent-cl);
+  background-color: var(--acent-cl);
+  fill: var(--white);
 }
 
 .socialnetworcs-title {
